[java] Stop using features introduced in Java 9+